# CAMELS_drivers

./: .gitignore  README.md  auto_upload.bat  driver_list.txt  update_driver_list.py  update_list.py  upload.bat
ADALM1000/: README.md  pyproject.toml  test.py
ADALM1000/nomad_camels_driver_ADALM1000/: ADALM1000.py  ADALM1000_ophyd.py
DAQ_custom_device/: DAQ_custom_device.py  DAQ_custom_device_ophyd.py  README.md  pyproject.toml  setup.py
DAQ_custom_device/nomad_camels_driver_daq_custom_device/: daq_custom_device.py  daq_custom_device_ophyd.py
Gap_Burner_Arduino/: Gap_Burner_Arduino.py  Gap_Burner_Arduino_ophyd.py  setup.py
NI_DAQ/: pyproject.toml
NI_DAQ/nomad_camels_driver_ni_daq/: daq_custom_device.py  ni_daq.py  ni_daq_ophyd.py
PID/: README.md  pyproject.toml
PID/nomad_camels_driver_PID/: PID.py  PID_config_sub.py  PID_manual_control.py  PID_ophyd.py
PID_controller/: PID_controller.py  PID_controller_config_sub.py  PID_controller_manual.py
PID_python/: PID_python.py  PID_python_config_sub.py  PID_python_manual.py  PID_python_ophyd.py
Support/visa_signal/: README.md  pyproject.toml
Support/visa_signal/nomad_camels_support_visa_signal/: visa_signal.py
SweepMe_device/: README.md  pyproject.toml
SweepMe_device/nomad_camels_driver_SweepMe_device/: SweepMe_device.py  SweepMe_device_ophyd.py
adc_x418/: README.md  pyproject.toml
agilent_34401/: README.md  __init__.py  pyproject.toml  setup.py
agilent_34401a/: README.md  pyproject.toml
agilent_81101a/: pyproject.toml
agilent_81101a/nomad_camels_driver_agilent_81101a_puls_generator/: agilent_81101a_puls_generator.py  agilent_81101a_puls_generator_ophyd.py
andor_newton/: README.md  pyproject.toml
andor_newton/nomad_camels_driver_andor_newton/: andor_newton.py  andor_newton_config.py  andor_newton_config.ui  andor_newton_ophyd.py
andor_shamrock_500/: README.md  pyproject.toml
attocube_anc300/: README.md  pyproject.toml
attocube_anc300/nomad_camels_driver_attocube_anc300/: attocube_anc300.py  attocube_anc300_ophyd.py
bruker_magnet_ni_daq/: bruker_magnet_ni_daq.py  bruker_magnet_ni_daq_ophyd.py  setup.py
cam_control_pylablib/: README.md  pyproject.toml
cam_control_pylablib/nomad_camels_driver_cam_control_pylablib/: cam_control_pylablib.py  cam_control_pylablib_ophyd.py
cryovac_tic_500/: README.md  pyproject.toml
demo_detector/: README.md  pyproject.toml
demo_device/: README.md  pyproject.toml  setup.py
demo_digital_multimeter/: README.md  pyproject.toml
demo_digital_multimeter/nomad_camels_driver_demo_digital_multimeter/: demo_digital_multimeter.py  demo_digital_multimeter_ophyd.py
demo_instrument/: README.md  pyproject.toml
demo_instrument/nomad_camels_driver_demo_instrument/: demo_instrument.py  demo_instrument_ophyd.py
demo_source_measure_unit/: README.md  pyproject.toml
demo_source_measure_unit/nomad_camels_driver_demo_source_measure_unit/: demo_source_measure_unit.py  demo_source_measure_unit_ophyd.py
empty_instrument_driver/: README.md  empty.py  empty_ophyd.py  pyproject.toml
empty_instrument_driver/nomad_camels_driver_empty/: empty.py  empty_ophyd.py
eurotherm_bisynch/: README.md  pyproject.toml
fabry_perot_calculator/: README.md  pyproject.toml
iBeam_smart/: README.md  pyproject.toml
iBeam_smart/nomad_camels_driver_iBeam_smart/: iBeam_smart.py  iBeam_smart_ophyd.py
keithley_2000/: README.md  pyproject.toml
keithley_2182a/: README.md  pyproject.toml
keithley_2182a/nomad_camels_driver_keithley_2182a/: keithley_2182a.py  keithley_2182a_ophyd.py
keithley_220/: README.md  keithley_220.py  pyproject.toml
keithley_237/: README.md  k237_visa_test.py  pyproject.toml
keithley_2400/: README.md  pyproject.toml
keithley_2400/nomad_camels_driver_keithley_2400/: keithley_2400.py  keithley_2400_ophyd.py
keithley_6221/: README.md  pyproject.toml
keithley_6221/nomad_camels_driver_keithley_6221/: keithley_6221.py  keithley_6221_ophyd.py
keysight_b2912/: keysight_b2912.py  pyproject.toml
keysight_b2912/camels_driver_keysight_b2912a/: keysight_b2912a.py
keysight_b2912/nomad_camels_driver_keysight_b2912a/: keysight_b2912a.py  keysight_b2912a_ophyd.py
keysight_b2912a/: README.md  pyproject.toml
keysight_e5270b/: README.md  keysight_e5270b.py  keysight_e5270b_ophyd.py  pyproject.toml
keysight_e5270b/camels_driver_keysight_e5270b/: keysight_e5270b_ophyd.py
keysight_e5270b/nomad_camels_driver_keysight_e5270b/: keysight_e5270b.py  keysight_e5270b_config.py  keysight_e5270b_config.ui  keysight_e5270b_config_channel.py  keysight_e5270b_ophyd.py
korad_3005p/: README.md  pyproject.toml
lakeshore_f41/: README.md  pyproject.toml
lakeshore_f41/nomad_camels_driver_lakeshore_f41/: lakeshore_f41.py  lakeshore_f41_ophyd.py
mechonics_cu30cl/: README.md  pyproject.toml
ni_daq/: README.md  pyproject.toml
pi_stage_e709/: README.md  pyproject.toml
pi_stage_e709/nomad_camels_driver_pi_stage_e709/: pi_stage_e709.py  pi_stage_e709_ophyd.py
rhode_and_schwarz_smp_02/: README.md  pyproject.toml
rhode_and_schwarz_smp_02/nomad_camels_driver_rhode_and_schwarz_smp_02/: rhode_and_schwarz_smp_02.py  rhode_and_schwarz_smp_02_ophyd.py
swabianinstruments_timetagger/: README.md  pyproject.toml
thorlabs_K10CR1/: README.md  pyproject.toml
thorlabs_K10CR1/nomad_camels_driver_thorlabs_K10CR1/: thorlabs_K10CR1.py  thorlabs_K10CR1_ophyd.py
thorlabs_ddr_25/: README.md  pyproject.toml
thorlabs_ddr_25/nomad_camels_driver_thorlabs_ddr_25/: thorlabs_ddr_25.py  thorlabs_ddr_25_ophyd.py
voltcraft_pps/: README.md  pyproject.toml  voltcraft_pps.py
voltcraft_pps/camels_driver_voltcraft_pps/: voltcraft_pps_ophyd.py
voltcraft_pps/nomad_camels_driver_voltcraft_pps/: voltcraft_pps.py  voltcraft_pps_ophyd.py
zaber_x_rst240b_e08/: README.md  pyproject.toml
zaber_x_rst240b_e08/nomad_camels_driver_zaber_x_rst240b_e08/: zaber_x_rst240b_e08.py  zaber_x_rst240b_e08_ophyd.py
zurich_instruments_mfli/: README.md  pyproject.toml
zurich_instruments_mfli/nomad_camels_driver_zurich_instruments_mfli/: zurich_instruments_mfli.py  zurich_instruments_mfli_ophyd.py
(+88 files in other folders)
