[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad_camels_driver_ADALM1000"
version = "0.1.0"
authors = [
	{name="enter your name here!", email="contact@email.com"}
]
description = "Instrument driver for ADALM1000 for NOMAD CAMELS"
readme = "README.md"
requires-python = ">=3.9.6"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
]

dependencies = [
	"nomad-camels",
    "pysmu"
]

[project.urls]
"NOMAD Camels GitHub" = "https://github.com/FAU-LAP/NOMAD-CAMELS"
"CAMELS Drivers GitHub" = "https://github.com/FAU-LAP/CAMELS_drivers"
"NOMAD Camels Documentation" = "https://fau-lap.github.io/NOMAD-CAMELS/doc/instruments/instruments.html"
