[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad_camels_driver_attocube_anc300"
version = "0.1.0"
authors = [
	{name="enter your name here!", email="contact@email.com"}
]
description = "Instrument driver for attocube_anc300 for NOMAD CAMELS"
readme = "README.md"
requires-python = ">=3.9.6"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = [
	"nomad-camels>=1.0.6",
    "pylablib>=1.4.2",
]

[project.urls]
"NOMAD Camels GitHub" = "https://github.com/FAU-LAP/NOMAD-CAMELS"
"CAMELS Drivers GitHub" = "https://github.com/FAU-LAP/CAMELS_drivers"
"NOMAD Camels Documentation" = "https://fau-lap.github.io/NOMAD-CAMELS/doc/instruments/instruments.html"
