[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad_camels_driver_keithley_6221"
version = "0.0.1"
authors = [
    {name="Simon Sochiera", email="s.sochiera@web.de"}
]
description = "Basic instrument driver for the Keithley current source 6221"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "pyvisa",
    "pyvisa-py"
]

[project.urls]
"GitHub Page" = "https://github.com/FAU-LAP/CAMELS_drivers"
"Documentation" = "https://fau-lap.github.io/NOMAD-CAMELS"
