[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad_camels_driver_thorlabs_ddr_25"
version = "0.0.2"
authors = [
    {name="Simon Sochiera", email="s.sochiera@web.de"}
]
description = "Basic instrument driver for the Thorlabs rotation stage DDR 25."
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "pylablib"
]

[project.urls]
"GitHub Page" = "https://github.com/FAU-LAP/CAMELS_drivers"
"Documentation" = "https://fau-lap.github.io/NOMAD-CAMELS"
