[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad_camels_driver_zurich_instruments_mfli"
version = "0.0.1"
authors = [
    {name="Simon Sochiera", email="s.sochiera@web.de"}
]
description = "Basic instrument driver for the Zurich Instruments lock-in amplifier MFLI."
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "zhinst"
]

[project.urls]
"GitHub Page" = "https://github.com/FAU-LAP/CAMELS_drivers"
"Documentation" = "https://fau-lap.github.io/NOMAD-CAMELS"
